--- a/zzmyownsites/jpg2.html
+++ b/zzmyownsites/jpg2.html
@@ -240,6 +240,17 @@
         <!-- Convert button -->
         <button id="convertBtn">Convert Image</button>
 
+        <!--In Article Ads-->
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
+            data-ad-format="fluid" data-ad-client="ca-pub-2648616140569696" data-ad-slot="9194679371"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!--In Article Ads-->
+
         <!-- Image preview -->
         <img id="preview" alt="Uploaded image preview">
 
@@ -249,6 +260,16 @@
         <!-- Hidden canvas -->
         <canvas id="canvas"></canvas>
     </div>
+
+    <!--In Article Ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+        crossorigin="anonymous"></script>
+    <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
+        data-ad-format="fluid" data-ad-client="ca-pub-2648616140569696" data-ad-slot="9194679371"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!--In Article Ads-->
 
     <!-- JavaScript for image conversion and interaction -->
     <script>
