--- a/index.html
+++ b/index.html
@@ -5891,6 +5891,19 @@
         </a>
       </article>
 
+      <article class="games">
+        <a href="https://playmorefree.netlify.app/zzmyownsites/jobs" title="JobS">
+          <div class="thumb">
+            <div class="play">
+              <span class="icon icon-link"></span>
+            </div>
+
+            <img src="https://img.freepik.com/premium-vector/newspaper-job-search_91756-511.jpg?semt=ais_hybrid"
+              width="100" height="100" alt="Jobs" />
+          </div>
+        </a>
+      </article>
+
     </section>
   </div>
 
