--- a/zzztrendingtopics/index.html
+++ b/zzztrendingtopics/index.html
@@ -15,8 +15,7 @@
 
     <title>Trending Topics</title>
     <link rel="stylesheet" href="index.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-        crossorigin="anonymous"></script>
+
 </head>
 
 <body class="">
@@ -47,7 +46,9 @@
                     <p></p>
                 </div>
             </a> -->
+
         </div>
+
         <div id="aside">
             <h2>Articles</h2>
             <div id="aadiv">
@@ -55,7 +56,7 @@
             </div>
         </div>
     </main>
-
+    <div id="pagination"></div>
     <div id="footer">
         <p>Copyright © 2025 Trending Topics.</p>
     </div>
